[project]
name = "ad-click-prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "daviti",email = "davit.ugl@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo (>=0.20.4,<0.21.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "shap (>=0.51.0,<0.52.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
